started variant swatch on pdp

--- a/snippets/product-data.liquid
+++ b/snippets/product-data.liquid
@@ -10,6 +10,7 @@ window.product = {
   "selected_variant": {{ product.selected_or_first_available_variant | json }},
   "options": {{ product.options | json }},
   "options_with_values": {{ product.options_with_values | json }},
+  "media": {{ product.media | json }},
   "images": {{ product.images | json }},
   "first_image": {{ product.images.first | json }},
   
